1.0 29/12/06
- Initial release
SVN
- added ability to scroll through playlist and play selected songs with the
volume control/play button.
- best used with g15daemon wip
- Respond to volume wheel & mute button
- Improve responsiveness
- Fix display if stream name is NULL
- Dont display elapsed or total time if playing a radio stream where we dont
  have that information.