@@ -1,7 +1,7 @@
-AC_INIT(g15mpd.c,[1.0svn], [mlampard@users.sf.net])
+AC_INIT(g15mpd.c,[1.2svn], [mlampard@users.sf.net])
  
 PACKAGE=g15mpd
-VERSION=1.0.0
+VERSION=1.2.0
 AC_PREFIX_DEFAULT(/usr)
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
@@ -12,12 +12,9 @@ AC_PROG_LIBTOOL
 AC_PROG_RANLIB
 
 AC_CHECK_LIB([g15daemon_client], [g15daemon_version],,AC_MSG_ERROR(["libg15daemon_client (or its devel package) not found. please install it"]))
-AC_CHECK_LIB([Xtst],[XTestQueryExtension],,AC_MSG_ERROR(["Xorg XTest extension library not found.  please install it"]))
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(g15daemon_client.h libg15render.h,,AC_MSG_ERROR(["libg15daemon_client (or its devel package) could not be found.  please install it"]))
-AC_CHECK_HEADERS(X11/Xlib.h X11/XF86keysym.h,,AC_MSG_ERROR(["Xorg development files could not be found.  please install the devel package"]))
-AC_CHECK_HEADERS(X11/extensions/XTest.h,,AC_MSG_ERROR(["Xorg XTEST Extension devel headers could not be found. please install the devel package"]))
 AC_CHECK_HEADERS(libmpd/libmpd.h,,AC_MSG_ERROR(["libmpd development files could not be found.  please install the libmpd devel package"]))
 AC_PATH_X
 
